# credor_server

./: .env  Cargo.toml  SystemWorkFlow.drawio  TRACING.md  credor.drawio
migrations/: 20250618085401_create_user_profiles_table.sql  20250618085406_create_user_settings_table.sql  20250618085418_create_scan_jobs_table.sql  20250618091500_create_scan_results_table.sql  20250708075434_create_system_logs.sql  20250721092347_create_conversation_table.sql  20250730121144_create_encodings.sql
src/: auth_middleware.rs  db.rs  errors.rs  helper.rs  lib.rs  logging.rs  main.rs  models.rs  server.rs  telemetry.rs
src/data/: mod.rs  scrape_request.rs  scraped.rs
src/detection/analyzer/: mod.rs
src/handlers/: auth.rs  data.rs  health.rs  mod.rs
src/handlers/admin/: analytics.rs  auth.rs  bucket.rs  guard.rs  health.rs  logs.rs  mod.rs  scans.rs  users.rs
src/handlers/ai/: job.rs
src/handlers/user/: auth.rs  bucket.rs  delete.rs  mod.rs  profile.rs  scan.rs  settings.rs
src/helper/: link.rs  macros.rs  mod.rs
src/routes/: get_categories.rs  get_platforms.rs  health.rs  mod.rs  scraped_data.rs  start_scrape.rs
src/scraper/client/: mod.rs
src/scrapers/: bluesky.rs  mod.rs
src/services/: mod.rs  scan_pipeline.rs  scraper.rs  supabase.rs
src/tracing/: db_writer.rs  middleware.rs  mod.rs  utils.rs
supabase/: config.toml
tests/: admin_endpoints.rs  middleware.rs  user_endpoints.rs
