[package]
name = "deepfake_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.9.0", features = ["macros"] }
env_logger = "0.11.6"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.15.1"
