[package]
name = "credor_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "time", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
time = { version = "0.3", features = ["serde-human-readable"] }
log = "0.4"
once_cell = "1"
humantime = "2"
thiserror = "1"
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }
tracing-actix-web = "0.7"
rand = "0.9.1"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
governor = "0.10.0"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
infer = "0.19.0"
